# betterbe

./: .gitignore  ANDROID_BUILD.md  ANDROID_OTA_UPDATES.md  Makefile  README.md  TODO.md  capacitor.config.ts  docker-compose.yml  implementation_plan.md  package-lock.json  package.json  svelte.config.js  task.md  vite.config.ts  vitest.config.ts
.github/workflows/: android.yml  deploy.yml  docker.yml
android/app/: build.gradle
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  env.docker.example
backend/migrations/: 20240101000000_initial_schema.sql
backend/src/: error.rs  main.rs
backend/src/api/: checkins.rs  goals.rs  habits.rs  mod.rs  sharing.rs  sync.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs
backend/src/db/: mod.rs
backend/src/models/: goal.rs  habit.rs  mod.rs  sharing.rs  user.rs
src/: app.css
src/lib/analytics/: heatmap.ts  heuristics.ts  momentum.ts  rolling-average.ts  streaks.ts  summary.ts
src/lib/capacitor/: server-url.ts
src/lib/components/: AuthPrompt.svelte  CloudSyncPrompt.svelte  MigrationPrompt.svelte  Toggle.svelte  index.ts
src/lib/config/: branding.ts
src/lib/data/: auth-store.ts  checkins.ts  goals.ts  habits.ts  index.ts  local.ts  reminders.ts  remote.ts  types.ts
src/lib/db/: checkins.ts  goals.ts  habits.ts  reminders.ts  schema.ts
src/lib/export/: json.ts
src/lib/stores/: ui.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/goals/: +page.svelte
src/routes/habits/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/settings/: +page.svelte
(+10 files in other folders)
